--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Aikdanai Sidhikosol</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Titillium+Web:900|Pacifico" rel="stylesheet">
   </head>
   <body>
     <noscript>
