--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Aikdanai Sidhikosol</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Titillium+Web:900|Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,700,900|Open+Sans|Passion+One:700|Pacifico" rel="stylesheet">
   </head>
   <body>
     <noscript>
