--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <title>Aikdanai Sidhikosol</title>
 
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,700,900|Source+Sans+Pro:200,400,600,700,900|Lato:100,400,900|Pacifico" rel="stylesheet">
   </head>
   <body>
